# drone

./: .gitignore  .gitmodules  airsim_pts  checkpoint0000.pth  checkpoint0001.pth  checkpoint0002.pth  checkpoint0003.pth  checkpoint0005.pth  checkpoint0012.pth  env.py  env_gl.py  eval.py  events.out.tfevents.1673435157.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673437945.jy-ThinkBook-16-G4-IAP  main.py  model.py  r4.pth  ratation.py  requirements.txt  test.py  test_airsim.py  test_new.py  test_path.py  train.sh
env_ros/: draw.py  env_ros.py  stat.py
log/: events.out.tfevents.1673600990.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673601001.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673601019.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673601044.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673601114.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673601129.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673601988.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673602472.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673603150.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673603182.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673603211.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673603241.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673604261.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673604272.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673604318.jy-ThinkBook-16-G4-IAP  events.out.tfevents.1673604332.jy-ThinkBook-16-G4-IAP  (+8 more)
models/: to_header.py
src/: CMakeLists.txt  env copy.hpp  env.hpp  quadsim.cpp  setup.py
src/objects/: ball.h  ext.cpp  ext.hpp
(+4 files in other folders)
